cmake_minimum_required(VERSION 4.1)
project(aoc_2015 C)

set(CMAKE_C_STANDARD 23)

add_executable(aoc_2015 main.c
        helpers.h
        days.h
        day1.h
        day1.c
        day2.h
        day2.c
        day3.c
        day3.h
        day4.h
        day4.c
        day5.h
        day5.c
        day6.h
        day6.c
        day7.h
        day7.c
        day8.h
        day8.c
        day9.h
        day9.c
        day10.h
        day10.c
        day11.h
        day11.c
        day12.h
        day12.c
        day13.h
        day13.c
        day14.h
        day14.c
        day15.h
        day15.c
        day16.h
        day16.c
        day17.h
        day17.c
        day18.h
        day18.c
        day19.h
        day19.c
        day20.h
        day20.c
        day21.h
        day21.c
        day22.h
        day22.c
        day23.h
        day23.c
        day24.h
        day24.c
        day25.h
        day25.c
        libs/md5.h
        libs/md5.c
        libs/itertools/itertools.h
        libs/itertools/itertools.c
        libs/itertools/ll.h
        libs/itertools/ll.c
        day9-pq.h
        day9-pq.c
        debug.h
        debug.c
        libs/json.h
)
